WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270806
[css-scoping] Scope limits with multiple selectors are ignored
https://bugs.webkit.org/show_bug.cgi?id=270806
Summary
[css-scoping] Scope limits with multiple selectors are ignored
Niklas Ljunglöf
Reported
2024-03-11 10:36:51 PDT
In the current Safari implementation of `@scope`, declared scope limits with multiple selectors are ignored. This is not according to spec since a scope limit is defined as a forgiving selector list. A workaround is to declare the scope limits selectors inside `:is()` or `:where()`.
Attachments
Two scope limit tests (one with a single selector and one with multiple selectors)
(1.15 KB, text/html)
2024-03-11 10:38 PDT
,
Niklas Ljunglöf
no flags
Details
Screenshot of attached test in Safari TP 190 and Chrome Canary 124.0.6351.0
(329.44 KB, image/png)
2024-03-11 10:40 PDT
,
Niklas Ljunglöf
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Niklas Ljunglöf
Comment 1
2024-03-11 10:38:04 PDT
Created
attachment 470294
[details]
Two scope limit tests (one with a single selector and one with multiple selectors)
Niklas Ljunglöf
Comment 2
2024-03-11 10:40:13 PDT
Created
attachment 470295
[details]
Screenshot of attached test in Safari TP 190 and Chrome Canary 124.0.6351.0
Radar WebKit Bug Importer
Comment 3
2024-03-18 10:37:13 PDT
<
rdar://problem/124956673
>
Matthieu Dubet
Comment 4
2024-03-18 14:55:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26075
EWS
Comment 5
2024-03-19 11:39:30 PDT
Committed
276359@main
(432386fb902b): <
https://commits.webkit.org/276359@main
> Reviewed commits have been landed. Closing PR #26075 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug