[CSS] Any @scope limit makes the element out of scope https://bugs.webkit.org/show_bug.cgi?id=270806 rdar://124956673

Reviewed by Antti Koivisto.

<scope-end> is a relative selector list, any valid complex selector
inside it represents a scope limit : for an element to be in scope,
it needs to not have any of those selectors matching one of its ancestors.

 * LayoutTests/fast/css/scope-at-rule-expected.html:
 * LayoutTests/fast/css/scope-at-rule.html:
 * LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/scope-evaluation-expected.txt:
 * LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/scope-evaluation.html:
 * LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/scope-invalidation-expected.txt:
 * Source/WebCore/style/ElementRuleCollector.cpp:
 (WebCore::Style::ElementRuleCollector::scopeRulesMatch):

Canonical link: https://commits.webkit.org/276359@main